fix: delete white space after footer

--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -404,6 +404,7 @@
 
   .footer-section {
     background-image: url("/shelter/assets/images/footer-gradient-background.png"), var(--gradient);
+    overflow-y: hidden;
   }
   .footer-container {
     padding-top: 40px;
